homeautomation/appdaemon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appdaemon
spec:
  ports:
    - name: appdaemon
      port: 5050
      protocol: TCP
      targetPort: 5050
    - name: code-server-http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector: {}
  sessionAffinity: None
  type: ClusterIP
